--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
     background-repeat:no-repeat;
     background-size:cover;*/
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .1);
-    background: url("../main.jpg") no-repeat center top;
+    background: url("../images/main.jpg") no-repeat center top;
     margin-top: -10px;
     padding-top: 20px;
     text-align: center;
@@ -122,4 +122,297 @@ p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
     color: #333;
+}
+
+.gridrow{ 
+    width:100% !important;
+}
+/*   layout page styles    */
+.navigation{ 
+    width:100%  !important;
+   height: 40px !important;
+   
+ } 
+ .mainLayer{
+    width: 100% !important;
+    margin: 0px !important; 
+}
+.header{ 
+    margin: 9px 0px 0px 10%;
+    font-weight: 500;
+    font-size: x-large;
+    color: white;
+    
+ }
+ .rightMenu{ 
+    font-weight: 100;
+   
+ } 
+ .menuItem{ 
+     width:40px !important;
+    margin-left:-5px !important;
+    /*margin-right:-15px !important;*/
+ }
+ .avatarIcon{ 
+    margin-top:-1px !important;
+ } 
+
+ /*   Roomlist page styles    */
+
+ .secondLayer{
+    width:100% ;
+    height:150px;
+    background-color: #682FD3;
+    margin-top:12px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: inset -19px 111px 34px -110px rgba(0,0,0,0.55);
+    -moz-box-shadow: inset -19px 111px 34px -110px rgba(0,0,0,0.55);
+    box-shadow: inset -19px 111px 34px -110px rgba(0,0,0,0.55);
+}
+.thirdLayer{
+    width:80% !important;
+    height:auto;
+    margin:-60px 10% 0 10%;
+    background-color: white;
+    -webkit-box-shadow: -1px 5px 74px -8px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 5px 74px -8px rgba(0,0,0,0.75);
+    box-shadow: -1px 5px 74px -8px rgba(0,0,0,0.75);
+
+}
+.tophead{
+    margin-top:20px;
+
+    font-weight: 400;
+    font-size: 22px;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.subtitleROOM{
+    margin-top:5px;
+    color: whitesmoke;
+    font-weight: 300;
+}
+.filters{
+    margin-top:30px;
+    font-weight: 400;
+}
+.filterhead{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+}
+.itemCollection{
+    margin-top:20px;
+    margin-bottom: 25px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+}
+.item{
+    margin-top:5px;
+}
+.grey{
+    float:right;
+    font-weight: 100;
+    color: grey;
+    margin-top:-1px;
+}
+.cardGroup{
+    margin-top:50px;
+    margin-left:40px;
+    margin-bottom: 50px;
+    width:100%;
+}
+.arrange{
+    width: 110% !important;
+  
+}
+
+.ad1{
+    margin-top:-14px;
+    width:100%;
+   
+    
+     /*background-image: url("/images/adstayw.jpg");*/
+      background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+@media screen and (min-width:1205px) {
+    .ad1 {
+            margin-top:-14px;
+            width:100%;
+            height:350px;
+            
+            /*background-image: url("/images/adstayw.jpg");*/
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+    }
+}
+
+
+
+    /*styles of room card*/
+
+
+
+
+
+.textLayer{
+    width:100%;
+    height: auto;
+}
+
+
+
+.review{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 12px;
+    font-weight: 100px;
+    color:lightslategray;
+    float:right;
+    margin-right: 10px;
+}
+
+.bedrow{
+    margin-bottom:-17px;
+}
+
+.marginRow{
+    margin-top:-19px;
+}
+.marginSecRow{
+    margin-top:-23px;
+}
+
+
+
+
+/*card editing...*/
+
+
+#wrapper {
+	width: 100%;
+	/*max-width: 1100px;*/
+	/*min-width: 800px;*/
+}
+
+#columns {
+	-webkit-column-count: 3;
+	-webkit-column-gap: 40px;
+	-webkit-column-fill: auto;
+	-moz-column-count: 3;
+	-moz-column-gap: 40px;
+	-moz-column-fill: auto;
+	column-count: 3;
+	column-gap: 40px;
+	column-fill: auto;
+}
+.pin {
+
+	display: inline-block;
+	background: #FEFEFE;
+	border: 2px solid #FAFAFA;
+	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+	margin: 0 2px 15px;
+	-webkit-column-break-inside: avoid;
+	-moz-column-break-inside: avoid;
+	column-break-inside: avoid;
+	padding: 15px;
+	padding-bottom: 5px;
+	background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
+	opacity: 1;
+	
+	-webkit-transition: all .2s ease;
+	-moz-transition: all .2s ease;
+	-o-transition: all .2s ease;
+	transition: all .2s ease;
+}
+
+.pin img {
+	width: 100%;
+	border-bottom: 1px solid #ccc;
+	padding-bottom: 15px;
+	margin-bottom: 5px;
+}
+
+.pin p {
+	font: 12px/18px Arial, sans-serif;
+	color: #333;
+	margin: 0;
+}
+
+@media (min-width: 960px) {
+	#columns {
+		-webkit-column-count: 3;
+		-moz-column-count: 3;
+		column-count: 3;
+	}
+}
+
+@media (min-width: 1100px) {
+	#columns {
+		-webkit-column-count: 3;
+		-moz-column-count: 3;
+		column-count: 3;
+	}
+}
+
+
+.roomcard {
+    width: 100%;
+    height: auto;
+    -webkit-column-break-inside: avoid;
+	-moz-column-break-inside: avoid;
+	column-break-inside: avoid;
+    display:inline-block;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
+    margin: 5px 2px 15px;
+}
+
+.roomcard img{
+    width:100%;
+    height: 200px;
+ 
+}
+.roomcard .ui.grid{
+    margin: 10px 0px 0px 0px;
+}
+.roomcard .roomType{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    font-weight: 500px;
+    color:darkslategray;
+    margin:5px 0px 0px 0px;
+    float:left;
+}
+.roomcard .roomPrice{
+   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    font-weight: 500px;
+    color:darkslategray;
+    float: right;
+    margin:5px 0px 0px 0px;
+    float:right;
+    
+}
+.roomBeds{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    font-weight: 100px;
+    color:lightslategray;
+}
+.locality{
+    float:right;
+}
+.roomcard p{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 13px;
+    font-weight: 100px;
+    color:lightslategray;
+    margin: 0 10px 0px 10px; 
 }
