--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,8 +1,32 @@
 {% load static from staticfiles %}
-<!doctype html>
+<!Doctype html>
 <html>
 <head>
+    <link href="{% static 'css/font.css' %}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/semantic.min.css' %}">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="{% static 'js/jquery.js' %}"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body>{% block content %}{% endblock %}</body>
+<body>
+    <div class="ui grid mainLayer">
+        <div class="row gridrow">
+            <div class="ui violet inverted secondary top fixed navigation menu">
+                <div class="header">stayways</div>
+                <div class="right menu rightMenu">
+                    <a class="item menuItem"><i aria-hidden="true" class="empty heart inverted icon"></i></a>
+                    <a class="item menuItem"><i aria-hidden="true" class="mail outline inverted icon"></i></a>
+                    <a class="item menuItem"><i aria-hidden="true" class="world inverted icon"></i></a>
+                    <a class="item avatarIcon"><img class="ui avatar image" src="{% static 'images/profile.jpg' %}"></a>
+                    <div class="item"></div>
+                </div>
+            </div>   
+        </div>
+    {% block content %}
+    {% endblock %}
+    </div>
+    
+    <script src="{% static 'js/semantic.min.js' %}"></script>
+    <script src="{% static 'js/script.js' %}"></script>
+</body>
 </html>
